arreglé el navbar

--- a/css/style.css
+++ b/css/style.css
@@ -13,3 +13,10 @@
 .hero{
    aspect-ratio: 9/16; /* estilo pantallas móviles */
 }
+
+.navbar-toggler {
+  border: none;
+}
+.navbar-brand img{
+  max-height: 50px;
+}
